# shopsystem-test-harness

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: settings.json
.claude/agents/: bc-implementer.md  bc-reviewer.md
.specstory/: .project.json
features/: bootstrap_freeze_verify.feature
src/shop_test_harness/: __main__.py  bootstrap.py  cli.py  freeze.py  verify.py
tests/: conftest.py  test_features.py
