[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "shopsystem-test-harness"
version = "0.1.0"
description = "Harness Bounded Context of the shopsystem product (Platform Operations subdomain). Drives experiments and validates the framework against itself by composing the three framework packages at the CLI boundary."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "David Stenglein"}]
dependencies = [
    "scenarios @ git+https://github.com/dstengle/shopsystem-scenarios@v0.1.0",
    "shop-templates @ git+https://github.com/dstengle/shopsystem-templates@v0.1.0",
    "shopsystem-messaging @ git+https://github.com/dstengle/shopsystem-messaging@v0.1.0",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-bdd>=7",
    "gherkin-official",
]

[project.urls]
Homepage = "https://github.com/dstengle/shopsystem-product"
Repository = "https://github.com/dstengle/shopsystem-test-harness"

[project.scripts]
shop-test-harness = "shop_test_harness.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
